target/MCParser.py
# Generated from main/mc/parser/MC.g4 by ANTLR 4.7.2
# encoding: utf-8
from antlr4 import *
from io import StringIO
from typing.io import TextIO
import sys




class MCParser ( Parser ):

    grammarFileName = "MC.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "'int'", "'float'", "'void'", "'boolean'", 
                     "'string'", "'break'", "'continue'", "'else'", "'for'", 
                     "'if'", "'return'", "'do'", "'while'", "'+'", "'*'", 
                     "'!'", "'||'", "'!='", "'<'", "'<='", "'='", "'-'", 
                     "'/'", "'%'", "'&&'", "'=='", "'>'", "'>='", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "'true'", "'false'", "<INVALID>", 
                     "'('", "')'", "'{'", "'}'", "'['", "']'", "';'", "','" ]

    symbolicNames = [ "<INVALID>", "INT", "FLOAT", "VOID", "BOOLEAN", "STRING", 
                      "BREAK", "CONTINUE", "ELSE", "FOR", "IF", "RETURN", 
                      "DO", "WHILE", "ADD", "MUL", "NOT", "OR", "NOTEQ", 
                      "LESS", "LESSEQ", "ASSIGN", "SUB", "DIV", "MOD", "AND", 
                      "EQ", "GREA", "GREAEQ", "INTLIT", "FLOATLIT", "BOOLLIT", 
                      "TRUE", "FALSE", "COMMENT", "LB", "RB", "LP", "RP", 
                      "LSB", "RSB", "SM", "CM", "WS", "ID", "STRINGLIT", 
                      "ILLEGAL_ESCAPE", "UNCLOSE_STRING", "ERROR_CHAR" ]

    RULE_program = 0
    RULE_decls = 1
    RULE_vardecl = 2
    RULE_lstvar = 3
    RULE_primitype = 4
    RULE_var = 5
    RULE_arrayvar = 6
    RULE_fundecl = 7
    RULE_typefun = 8
    RULE_out_array_pointer_type = 9
    RULE_in_array_pointer_type = 10
    RULE_paradecl = 11
    RULE_block_statement = 12
    RULE_var_stm = 13
    RULE_if_statement = 14
    RULE_do_while_statement = 15
    RULE_for_statement = 16
    RULE_break_statement = 17
    RULE_continue_statement = 18
    RULE_return_statement = 19
    RULE_exp_statement = 20
    RULE_statement = 21
    RULE_exp = 22
    RULE_exp1 = 23
    RULE_exp2 = 24
    RULE_exp3 = 25
    RULE_exp4 = 26
    RULE_exp5 = 27
    RULE_exp6 = 28
    RULE_exp7 = 29
    RULE_exp8 = 30
    RULE_exp9 = 31
    RULE_operand = 32
    RULE_literal = 33
    RULE_funcall = 34

    ruleNames =  [ "program", "decls", "vardecl", "lstvar", "primitype", 
                   "var", "arrayvar", "fundecl", "typefun", "out_array_pointer_type", 
                   "in_array_pointer_type", "paradecl", "block_statement", 
                   "var_stm", "if_statement", "do_while_statement", "for_statement", 
                   "break_statement", "continue_statement", "return_statement", 
                   "exp_statement", "statement", "exp", "exp1", "exp2", 
                   "exp3", "exp4", "exp5", "exp6", "exp7", "exp8", "exp9", 
                   "operand", "literal", "funcall" ]

    EOF = Token.EOF
    INT=1
    FLOAT=2
    VOID=3
    BOOLEAN=4
    STRING=5
    BREAK=6
    CONTINUE=7
    ELSE=8
    FOR=9
    IF=10
    RETURN=11
    DO=12
    WHILE=13
    ADD=14
    MUL=15
    NOT=16
    OR=17
    NOTEQ=18
    LESS=19
    LESSEQ=20
    ASSIGN=21
    SUB=22
    DIV=23
    MOD=24
    AND=25
    EQ=26
    GREA=27
    GREAEQ=28
    INTLIT=29
    FLOATLIT=30
    BOOLLIT=31
    TRUE=32
    FALSE=33
    COMMENT=34
    LB=35
    RB=36
    LP=37
    RP=38
    LSB=39
    RSB=40
    SM=41
    CM=42
    WS=43
    ID=44
    STRINGLIT=45
    ILLEGAL_ESCAPE=46
    UNCLOSE_STRING=47
    ERROR_CHAR=48

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.7.2")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class ProgramContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def EOF(self):
            return self.getToken(MCParser.EOF, 0)

        def decls(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(MCParser.DeclsContext)
            else:
                return self.getTypedRuleContext(MCParser.DeclsContext,i)


        def getRuleIndex(self):
            return MCParser.RULE_program

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitProgram" ):
                return visitor.visitProgram(self)
            else:
                return visitor.visitChildren(self)




    def program(self):

        localctx = MCParser.ProgramContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_program)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 71 
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while True:
                self.state = 70
                self.decls()
                self.state = 73 
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if not ((((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << MCParser.INT) | (1 << MCParser.FLOAT) | (1 << MCParser.VOID) | (1 << MCParser.BOOLEAN) | (1 << MCParser.STRING))) != 0)):
                    break

            self.state = 75
            self.match(MCParser.EOF)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class DeclsContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def vardecl(self):
            return self.getTypedRuleContext(MCParser.VardeclContext,0)


        def fundecl(self):
            return self.getTypedRuleContext(MCParser.FundeclContext,0)


        def getRuleIndex(self):
            return MCParser.RULE_decls

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitDecls" ):
                return visitor.visitDecls(self)
            else:
                return visitor.visitChildren(self)




    def decls(self):

        localctx = MCParser.DeclsContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_decls)
        try:
            self.state = 79
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,1,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 77
                self.vardecl()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 78
                self.fundecl()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class VardeclContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def primitype(self):
            return self.getTypedRuleContext(MCParser.PrimitypeContext,0)


        def lstvar(self):
            return self.getTypedRuleContext(MCParser.LstvarContext,0)


        def SM(self):
            return self.getToken(MCParser.SM, 0)

        def getRuleIndex(self):
            return MCParser.RULE_vardecl

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitVardecl" ):
                return visitor.visitVardecl(self)
            else:
                return visitor.visitChildren(self)




    def vardecl(self):

        localctx = MCParser.VardeclContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_vardecl)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 81
            self.primitype()
            self.state = 82
            self.lstvar()
            self.state = 83
            self.match(MCParser.SM)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class LstvarContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def var(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(MCParser.VarContext)
            else:
                return self.getTypedRuleContext(MCParser.VarContext,i)


        def CM(self, i:int=None):
            if i is None:
                return self.getTokens(MCParser.CM)
            else:
                return self.getToken(MCParser.CM, i)

        def getRuleIndex(self):
            return MCParser.RULE_lstvar

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitLstvar" ):
                return visitor.visitLstvar(self)
            else:
                return visitor.visitChildren(self)




    def lstvar(self):

        localctx = MCParser.LstvarContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_lstvar)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 85
            self.var()
            self.state = 90
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==MCParser.CM:
                self.state = 86
                self.match(MCParser.CM)
                self.state = 87
                self.var()
                self.state = 92
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class PrimitypeContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def BOOLEAN(self):
            return self.getToken(MCParser.BOOLEAN, 0)

        def INT(self):
            return self.getToken(MCParser.INT, 0)

        def FLOAT(self):
            return self.getToken(MCParser.FLOAT, 0)

        def STRING(self):
            return self.getToken(MCParser.STRING, 0)

        def getRuleIndex(self):
            return MCParser.RULE_primitype

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitPrimitype" ):
                return visitor.visitPrimitype(self)
            else:
                return visitor.visitChildren(self)




    def primitype(self):

        localctx = MCParser.PrimitypeContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_primitype)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 93
            _la = self._input.LA(1)
            if not((((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << MCParser.INT) | (1 << MCParser.FLOAT) | (1 << MCParser.BOOLEAN) | (1 << MCParser.STRING))) != 0)):
                self._errHandler.recoverInline(self)
            else:
                self._errHandler.reportMatch(self)
                self.consume()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class VarContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ID(self):
            return self.getToken(MCParser.ID, 0)

        def arrayvar(self):
            return self.getTypedRuleContext(MCParser.ArrayvarContext,0)


        def getRuleIndex(self):
            return MCParser.RULE_var

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitVar" ):
                return visitor.visitVar(self)
            else:
                return visitor.visitChildren(self)




    def var(self):

        localctx = MCParser.VarContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_var)
        try:
            self.state = 97
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,3,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 95
                self.match(MCParser.ID)
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 96
                self.arrayvar()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ArrayvarContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ID(self):
            return self.getToken(MCParser.ID, 0)

        def LSB(self):
            return self.getToken(MCParser.LSB, 0)

        def INTLIT(self):
            return self.getToken(MCParser.INTLIT, 0)

        def RSB(self):
            return self.getToken(MCParser.RSB, 0)

        def getRuleIndex(self):
            return MCParser.RULE_arrayvar

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitArrayvar" ):
                return visitor.visitArrayvar(self)
            else:
                return visitor.visitChildren(self)




    def arrayvar(self):

        localctx = MCParser.ArrayvarContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_arrayvar)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 99
            self.match(MCParser.ID)
            self.state = 100
            self.match(MCParser.LSB)
            self.state = 101
            self.match(MCParser.INTLIT)
            self.state = 102
            self.match(MCParser.RSB)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class FundeclContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def typefun(self):
            return self.getTypedRuleContext(MCParser.TypefunContext,0)


        def ID(self):
            return self.getToken(MCParser.ID, 0)

        def LB(self):
            return self.getToken(MCParser.LB, 0)

        def RB(self):
            return self.getToken(MCParser.RB, 0)

        def block_statement(self):
            return self.getTypedRuleContext(MCParser.Block_statementContext,0)


        def paradecl(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(MCParser.ParadeclContext)
            else:
                return self.getTypedRuleContext(MCParser.ParadeclContext,i)


        def CM(self, i:int=None):
            if i is None:
                return self.getTokens(MCParser.CM)
            else:
                return self.getToken(MCParser.CM, i)

        def getRuleIndex(self):
            return MCParser.RULE_fundecl

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitFundecl" ):
                return visitor.visitFundecl(self)
            else:
                return visitor.visitChildren(self)




    def fundecl(self):

        localctx = MCParser.FundeclContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_fundecl)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 104
            self.typefun()
            self.state = 105
            self.match(MCParser.ID)
            self.state = 106
            self.match(MCParser.LB)
            self.state = 115
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if (((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << MCParser.INT) | (1 << MCParser.FLOAT) | (1 << MCParser.BOOLEAN) | (1 << MCParser.STRING))) != 0):
                self.state = 107
                self.paradecl()
                self.state = 112
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                while _la==MCParser.CM:
                    self.state = 108
                    self.match(MCParser.CM)
                    self.state = 109
                    self.paradecl()
                    self.state = 114
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)



            self.state = 117
            self.match(MCParser.RB)
            self.state = 118
            self.block_statement()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class TypefunContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def primitype(self):
            return self.getTypedRuleContext(MCParser.PrimitypeContext,0)


        def VOID(self):
            return self.getToken(MCParser.VOID, 0)

        def out_array_pointer_type(self):
            return self.getTypedRuleContext(MCParser.Out_array_pointer_typeContext,0)


        def getRuleIndex(self):
            return MCParser.RULE_typefun

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitTypefun" ):
                return visitor.visitTypefun(self)
            else:
                return visitor.visitChildren(self)




    def typefun(self):

        localctx = MCParser.TypefunContext(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_typefun)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 123
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,6,self._ctx)
            if la_ == 1:
                self.state = 120
                self.primitype()
                pass

            elif la_ == 2:
                self.state = 121
                self.match(MCParser.VOID)
                pass

            elif la_ == 3:
                self.state = 122
                self.out_array_pointer_type()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Out_array_pointer_typeContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def primitype(self):
            return self.getTypedRuleContext(MCParser.PrimitypeContext,0)


        def LSB(self):
            return self.getToken(MCParser.LSB, 0)

        def RSB(self):
            return self.getToken(MCParser.RSB, 0)

        def getRuleIndex(self):
            return MCParser.RULE_out_array_pointer_type

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitOut_array_pointer_type" ):
                return visitor.visitOut_array_pointer_type(self)
            else:
                return visitor.visitChildren(self)




    def out_array_pointer_type(self):

        localctx = MCParser.Out_array_pointer_typeContext(self, self._ctx, self.state)
        self.enterRule(localctx, 18, self.RULE_out_array_pointer_type)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 125
            self.primitype()
            self.state = 126
            self.match(MCParser.LSB)
            self.state = 127
            self.match(MCParser.RSB)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class In_array_pointer_typeContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def primitype(self):
            return self.getTypedRuleContext(MCParser.PrimitypeContext,0)


        def ID(self):
            return self.getToken(MCParser.ID, 0)

        def LSB(self):
            return self.getToken(MCParser.LSB, 0)

        def RSB(self):
            return self.getToken(MCParser.RSB, 0)

        def getRuleIndex(self):
            return MCParser.RULE_in_array_pointer_type

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitIn_array_pointer_type" ):
                return visitor.visitIn_array_pointer_type(self)
            else:
                return visitor.visitChildren(self)




    def in_array_pointer_type(self):

        localctx = MCParser.In_array_pointer_typeContext(self, self._ctx, self.state)
        self.enterRule(localctx, 20, self.RULE_in_array_pointer_type)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 129
            self.primitype()
            self.state = 130
            self.match(MCParser.ID)
            self.state = 131
            self.match(MCParser.LSB)
            self.state = 132
            self.match(MCParser.RSB)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ParadeclContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def primitype(self):
            return self.getTypedRuleContext(MCParser.PrimitypeContext,0)


        def ID(self):
            return self.getToken(MCParser.ID, 0)

        def in_array_pointer_type(self):
            return self.getTypedRuleContext(MCParser.In_array_pointer_typeContext,0)


        def getRuleIndex(self):
            return MCParser.RULE_paradecl

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitParadecl" ):
                return visitor.visitParadecl(self)
            else:
                return visitor.visitChildren(self)




    def paradecl(self):

        localctx = MCParser.ParadeclContext(self, self._ctx, self.state)
        self.enterRule(localctx, 22, self.RULE_paradecl)
        try:
            self.state = 138
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,7,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 134
                self.primitype()
                self.state = 135
                self.match(MCParser.ID)
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 137
                self.in_array_pointer_type()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Block_statementContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def LP(self):
            return self.getToken(MCParser.LP, 0)

        def RP(self):
            return self.getToken(MCParser.RP, 0)

        def var_stm(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(MCParser.Var_stmContext)
            else:
                return self.getTypedRuleContext(MCParser.Var_stmContext,i)


        def getRuleIndex(self):
            return MCParser.RULE_block_statement

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitBlock_statement" ):
                return visitor.visitBlock_statement(self)
            else:
                return visitor.visitChildren(self)




    def block_statement(self):

        localctx = MCParser.Block_statementContext(self, self._ctx, self.state)
        self.enterRule(localctx, 24, self.RULE_block_statement)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 140
            self.match(MCParser.LP)
            self.state = 144
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while (((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << MCParser.INT) | (1 << MCParser.FLOAT) | (1 << MCParser.BOOLEAN) | (1 << MCParser.STRING) | (1 << MCParser.BREAK) | (1 << MCParser.CONTINUE) | (1 << MCParser.FOR) | (1 << MCParser.IF) | (1 << MCParser.RETURN) | (1 << MCParser.DO) | (1 << MCParser.NOT) | (1 << MCParser.SUB) | (1 << MCParser.INTLIT) | (1 << MCParser.FLOATLIT) | (1 << MCParser.BOOLLIT) | (1 << MCParser.LB) | (1 << MCParser.LP) | (1 << MCParser.ID) | (1 << MCParser.STRINGLIT))) != 0):
                self.state = 141
                self.var_stm()
                self.state = 146
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 147
            self.match(MCParser.RP)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Var_stmContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def vardecl(self):
            return self.getTypedRuleContext(MCParser.VardeclContext,0)


        def statement(self):
            return self.getTypedRuleContext(MCParser.StatementContext,0)


        def getRuleIndex(self):
            return MCParser.RULE_var_stm

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitVar_stm" ):
                return visitor.visitVar_stm(self)
            else:
                return visitor.visitChildren(self)




    def var_stm(self):

        localctx = MCParser.Var_stmContext(self, self._ctx, self.state)
        self.enterRule(localctx, 26, self.RULE_var_stm)
        try:
            self.state = 151
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [MCParser.INT, MCParser.FLOAT, MCParser.BOOLEAN, MCParser.STRING]:
                self.enterOuterAlt(localctx, 1)
                self.state = 149
                self.vardecl()
                pass
            elif token in [MCParser.BREAK, MCParser.CONTINUE, MCParser.FOR, MCParser.IF, MCParser.RETURN, MCParser.DO, MCParser.NOT, MCParser.SUB, MCParser.INTLIT, MCParser.FLOATLIT, MCParser.BOOLLIT, MCParser.LB, MCParser.LP, MCParser.ID, MCParser.STRINGLIT]:
                self.enterOuterAlt(localctx, 2)
                self.state = 150
                self.statement()
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class If_statementContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def IF(self):
            return self.getToken(MCParser.IF, 0)

        def LB(self):
            return self.getToken(MCParser.LB, 0)

        def exp(self):
            return self.getTypedRuleContext(MCParser.ExpContext,0)


        def RB(self):
            return self.getToken(MCParser.RB, 0)

        def statement(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(MCParser.StatementContext)
            else:
                return self.getTypedRuleContext(MCParser.StatementContext,i)


        def ELSE(self):
            return self.getToken(MCParser.ELSE, 0)

        def getRuleIndex(self):
            return MCParser.RULE_if_statement

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitIf_statement" ):
                return visitor.visitIf_statement(self)
            else:
                return visitor.visitChildren(self)




    def if_statement(self):

        localctx = MCParser.If_statementContext(self, self._ctx, self.state)
        self.enterRule(localctx, 28, self.RULE_if_statement)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 153
            self.match(MCParser.IF)
            self.state = 154
            self.match(MCParser.LB)
            self.state = 155
            self.exp()
            self.state = 156
            self.match(MCParser.RB)
            self.state = 157
            self.statement()
            self.state = 160
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,10,self._ctx)
            if la_ == 1:
                self.state = 158
                self.match(MCParser.ELSE)
                self.state = 159
                self.statement()


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Do_while_statementContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def DO(self):
            return self.getToken(MCParser.DO, 0)

        def WHILE(self):
            return self.getToken(MCParser.WHILE, 0)

        def exp(self):
            return self.getTypedRuleContext(MCParser.ExpContext,0)


        def SM(self):
            return self.getToken(MCParser.SM, 0)

        def statement(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(MCParser.StatementContext)
            else:
                return self.getTypedRuleContext(MCParser.StatementContext,i)


        def getRuleIndex(self):
            return MCParser.RULE_do_while_statement

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitDo_while_statement" ):
                return visitor.visitDo_while_statement(self)
            else:
                return visitor.visitChildren(self)




    def do_while_statement(self):
